[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/GameScene/Bullet.png" type="Texture" id=1]
[ext_resource path="res://Scenes/GameScene/Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.674, 3.77783 )

[node name="Bullet" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 60, 50, 100, 30 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.295807, 0.295807 )
scale = Vector2( 1.00472, 1 )
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
